--- a/.github/workflows/cloudformation.yaml
+++ b/.github/workflows/cloudformation.yaml
@@ -20,5 +20,5 @@ jobs:
         run: |
           aws cloudformation deploy \
             --template-file s3.yaml \
-            --stack-name mv-coderoad-s3-stack \
+            --stack-name mv-coderoad-stack \
             --no-fail-on-empty-changeset
