--- a/.github/workflows/cloudformation.yaml
+++ b/.github/workflows/cloudformation.yaml
@@ -27,5 +27,4 @@ jobs:
         run: |
           aws cloudformation deploy \
             --template-file s3.yaml \
-            --stack-name mv-coderoad-stack \
-            --no-fail-on-empty-changeset
+            --stack-name mv-coderoad-stack 
