--- a/s3.yaml
+++ b/s3.yaml
@@ -5,4 +5,4 @@ Resources:
   MyBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: mv-coderoad-s3-bucket
+      BucketName: mv-coderoad-s3-bucket2
